--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -10,7 +10,7 @@
   <!-- Include the script that builds the page and powers Netlify CMS -->
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   <script>
-    CMS.registerPreviewStyle("/admin.css");
+    CMS.registerPreviewStyle("/admin/admin.css");
   </script>
 </body>
 </html>
